# L2S2_Proj_Automate

./: BN6-01.txt  BN6-TraceTest  BN6-trace01.txt  Bilan_Prj_Auto.xlsx  CMakeLists.txt  CtrlF  Minim_Algo  Tools.c  Tools.h  Vdeterminisation_completion.c  Vdeterminisation_completion.h  Vmenu.c  Vmenu.h  Vtest_automates.c  Vtest_automates.h  automates.c  automates.h  main.c  minimisation.c  minimisation.h  minimisation_V2.c  minimisation_V2.h
Projet Automates finis et Expressions rationnelles/: BN6-02.txt  BN6-03.txt  BN6-04.txt  BN6-05.txt  BN6-06.txt  BN6-07.txt  BN6-08.txt  BN6-09.txt  BN6-10.txt  BN6-11.txt  BN6-12.txt  BN6-13.txt  BN6-14.txt  BN6-15.txt  BN6-16.txt  BN6-17.txt  BN6-18.txt  BN6-19.txt  BN6-20.txt  BN6-21.txt  BN6-22.txt  BN6-23.txt  BN6-24.txt  BN6-25.txt  BN6-26.txt  BN6-27.txt  BN6-28.txt  BN6-29.txt  BN6-30.txt  BN6-31.txt  BN6-32.txt  BN6-33.txt  BN6-34.txt  BN6-35.txt  BN6-36.txt  BN6-37.txt  BN6-38.txt  BN6-39.txt  BN6-40.txt  BN6-41.txt  (+67 more)
